releases/onlyoffice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documentserver
  namespace: onlyoffice
spec:
  selector:
    app: documentserver
  ports:
    - port: 80
      targetPort: 80
      name: http-documentserver
      appProtocol: http
